# aeolus_plugin

./: .gitignore  .gitmodules  Aeolus.jucer  CMakeLists.txt  README.md
.github/workflows/: build.yml
Model/: .gitignore  Partials.py  model_fit.py  test.py
Resources/configs/: default_organ.json
Resources/stops/: II_cornet1.ae0  II_cornet2.ae0  II_cornet3.ae0  II_cornet4.ae0  II_cornet5.ae0  mixtur1.ae0  mixtur2.ae0  mixtur3.ae0  mixtur4.ae0  mixtur5.ae0
Resources/stops/custom/: III_bassoon_ae0.json  III_violin_8_ae0.json  II_quint_113_ae0.json  I_fourniture5_ae0.json  I_octave_26th_ae0.json  I_octave_29th_ae0.json  I_principal_16_ae0.json  I_principal_5th_ae0.json  I_quint_26th_ae0.json  I_trumpet4_ae0.json  P_flute8_ae0.json  P_violoncell_8_ae0.json  harm12_ae0.json  harm15_ae0.json  harm17_ae0.json  harm19_ae0.json  harm1_2_ae0.json  harm1_ae0.json  harm22_ae0.json  harm24_ae0.json  harm26_ae0.json  harm29_ae0.json  harm33_ae0.json  harm36_ae0.json  harm5_ae0.json  harm8_ae0.json  vox_humana_ae0.json
Resources/ui/: style.scss  view.xml
Source/: CustomMidiKeyboard.cpp  CustomMidiKeyboard.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/aeolus/: addsynth.cpp  addsynth.h  audioparam.cpp  audioparam.h  division.cpp  division.h  engine.cpp  engine.h  globals.cpp  globals.h  levelmeter.cpp  levelmeter.h  list.h  memory.h  rankwave.cpp  rankwave.h  ringbuffer.h  scale.cpp  scale.h  sema.cpp  sema.h  sequencer.cpp  sequencer.h  simd.cpp  simd.h  stop.cpp  stop.h  voice.cpp  voice.h  worker.cpp  worker.h
Source/aeolus/dsp/: adsrenv.cpp  adsrenv.h  chiff.cpp  chiff.h  convolve.h  convolver.cpp  convolver.h  delay.cpp  delay.h  fft.cpp  fft.h  filter.cpp  filter.h  interpolator.cpp  interpolator.h  limiter.cpp  limiter.h  spatial.cpp  spatial.h
Source/mts/: libMTSClient.cpp  libMTSClient.h
Source/ui/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  CustomMidiKeyboard.cpp  DivisionControlPanel.cpp  DivisionControlPanel.h  DivisionView.cpp  DivisionView.h  FxComponent.cpp  FxComponent.h  GlobalTuningComponent.cpp  GlobalTuningComponent.h  LevelIndicator.cpp  LevelIndicator.h  MidiChannelsComponent.cpp  MidiChannelsComponent.h  MidiChannelsSelectComponent.cpp  MidiChannelsSelectComponent.h  OverlayComponent.cpp  OverlayComponent.h  ParameterSlider.cpp  ParameterSlider.h  PresetView.cpp  PresetView.h  SequencerView.cpp  SequencerView.h  SettingsComponent.cpp  SettingsComponent.h  StopButton.cpp  StopButton.h
asiosdk_2.3.3_2019-06-14/: asio_sdk.txt
docs/: index.html
docs/styles/: main.css
